# mono-AXIOM

./: .env.example  .gitignore  Documentation.md  Handoff.md  LICENSE  PRD.md  README.md  pyproject.toml
axiom-api/: README.md  __init__.py
axiom-brain/: README.md  __init__.py
axiom-fetch/: README.md  __init__.py  chunker.py  docx_extractor.py  extractor.py  fetcher.py  ids.py  pdf_extractor.py  pipeline.py
axiom-fetch/tests/: test_chunker.py  test_docx_extractor.py  test_extractor.py  test_fetcher.py  test_ids.py  test_pdf_extractor.py  test_pipeline.py
axiom-queue/: README.md  __init__.py  dispatcher.py  handlers.py  ids.py  jobs.py  retry.py  watchdog.py  worker.py
axiom-queue/tests/: test_dispatcher.py  test_handlers.py  test_jobs.py  test_retry.py  test_watchdog.py  test_worker.py
axiom-store/: README.md  __init__.py  cache.py  client.py  filesystem.py  frontmatter.py  protocol.py  schema.py  server.py  test_utils.py
axiom-store/tests/: test_cache.py  test_client.py  test_dispatch.py  test_filesystem.py  test_frontmatter.py  test_protocol.py  test_schema.py  test_server.py
mono-vault.example/: README.md
mono-vault.example/exports/: README.md
mono-vault.example/fetch/: README.md
mono-vault.example/fetch/chunks/: README.md
mono-vault.example/fetch/sources/: README.md
mono-vault.example/fetch/uploads/: README.md
mono-vault.example/jobs/: README.md
mono-vault.example/memory/: README.md
mono-vault.example/memory/conversations/: README.md
mono-vault.example/memory/facts/: README.md
mono-vault.example/memory/summaries/: README.md
mono-vault.example/personas/: README.md
mono-vault.example/system/: README.md
scripts/: bootstrap_vault.py  demo_axiom_fetch.py  demo_axiom_queue.py  demo_axiom_store.py
